[metadata]
name = ledgerhelpers
version = attr: ledgerhelpers.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = A collection of helper programs and a helper library for Ledger (ledger-cli)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rudd-O/ledgerhelpers
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Office/Business :: Financial :: Accounting
license = GPLv2+

[options]
include_package_data = True
install_requires =
    PyGObject
    ledger
    yahoo-finance
package_dir =
    = src
packages = find:
scripts =
    bin/addtrans
    bin/cleartrans-cli
    bin/sellstock-cli
    bin/sorttrans-cli
    bin/updateprices
    bin/withdraw-cli

[options.packages.find]
where = src
