[metadata]
name = ledgerhelpers
version = attr: ledgerhelpers.__version__
author = Manuel Amador (Rudd-O)
author_email = rudd-o@rudd-o.com
description = A collection of helper programs and a helper library for Ledger (ledger-cli)
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Rudd-O/ledgerhelpers
classifiers =
    Development Status :: 4 - Beta
    Environment :: X11 Applications :: GTK
    Intended Audience :: End Users/Desktop
    License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Topic :: Office/Business :: Financial :: Accounting
license = GPLv2+

[options]
include_package_data = True
install_requires =
    PyGObject
    ledger
    yahoo-finance
package_dir =
    = src
packages = find:
scripts =
    bin/addtrans
    bin/cleartrans-cli
    bin/sellstock-cli
    bin/sorttrans-cli
    bin/updateprices
    bin/withdraw-cli

[options.data_files]
share/applications =
    applications/withdraw-cli.desktop
    applications/cleartrans-cli.desktop
    applications/sorttrans-cli.desktop
    applications/updateprices.desktop
    applications/sellstock-cli.desktop
    applications/addtrans.desktop
share/doc/ledgerhelpers =
    doc/addtrans.md
    doc/addtrans-account.png
    doc/addtrans-amount.png
    doc/addtrans-dropdown.png
    doc/addtrans-readyagain.png
    doc/addtrans-started-up.png
share/man/man1 =
    man/addtrans.1
    man/cleartrans-cli.1
    man/sellstock-cli.1
    man/sorttrans-cli.1
    man/withdraw-cli.1

[options.packages.find]
where = src
